# nature_counts

./: .gitignore  Dockerfile.build-yolo  Dockerfile.build-yolo-6.4  Dockerfile.mediamtx  LICENSE  README.md  build-deepstream-yolo-6.4.sh  build-deepstream-yolo.sh  commands-gst-launch.txt  docker-compose.ds60.yml  docker-compose.ds64.yml  docker-compose.override.yml  docker-compose.yml  ffmpeg-youtube-command.txt  infos-cameras.txt  mediamtx.yml  run-docker-deepstream-cfd-headless.sh  run-docker-deepstream-cfd.sh  run-docker-deepstream-headless.sh  run-docker-deepstream.sh  run-docker-new.sh  run-docker-new_headless.sh  test_demux.py
config/: test_tracker.txt
deepstream-app-fish/: README.md  config_infer_primary_cfd_rfdetr_nano.txt  config_infer_primary_cfd_yolov12.txt  config_infer_primary_cfd_yolov12.txt.bak  config_infer_primary_cfd_yolov12_ds64.txt  config_infer_primary_yoloV3.txt  config_tracker_NvDCF_accuracy.yml  config_tracker_NvDCF_fish.yml  export_rfdetr_onnx.py  export_yolov12_onnx.py  models.json  test_cfd_singlevideo.txt  test_cfd_singlevideo_headless.txt  test_tracker_cfd.txt  test_tracker_cfd_headless.txt  test_tracker_yolofish.txt  test_tracker_yolofish_headless.txt
deepstream-cpp/: CMakeLists.txt  Dockerfile
deepstream-cpp/src/: config.cpp  config.h  main.cpp  phoenix_client.cpp  phoenix_client.h  pipeline.cpp  pipeline.h  probes.cpp  probes.h  thumbnail.cpp  thumbnail.h  tracker_config.cpp  tracker_config.h
deepstream-python/: Dockerfile  Dockerfile.ds64  ds_fish_pipeline.py  entrypoint.sh  phoenix_channel_client.py  requirements.txt  test_full_pipeline.py  test_minimal_pipeline.py
docs/: commands.md  community-fish-detector.md  deepstream-pipeline.md  deepstream-video-output-status.md  gcs-video-support.md  google-storage.md  integration-plan-cfd.md  monitoring-solutions.md  offline-inference-architecture.md  phoenix-deepstream-integration.md  pipeline-optimization.md  upgrade-ds64-plan.md
feniks-test/: docker-compose.yml
phoenix-app/: .gitignore  Dockerfile  Dockerfile.dev  README.md  mix.exs
(+109 files in other folders)
